# TopK-Insights

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yml  LICENSE  Makefile  README.md  car_example.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: tests.yml
docs/source/: api.rst  conf.py  index.rst  usage.rst
tests/: test_import.py
tki/: __init__.py  __version__.py  _version.py  aggregators.py  app.py  compositeExtractor.py  composite_extractor.py  dimensions.py  extractors.py  heap.py  insights.py  spaces.py  tki.py
tki/app/: __init__.py  __main__.py  app.py  plots.py
tki/insights/: __init__.py  compound_insight.py  insight.py  point_insight.py  shape_insight.py
