[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]
pythonpath = [
  "tki"
]

[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "tki"
authors = [{name = "Henning Merklinger", email = "henning.merklinger@gmail.com"}]
dynamic = ["version", "description"]
